# Martin

./: .gitignore  .gitmodules  CMakeLists.txt  setup.sh
src/: main.cpp
src/resources/shaders/: triangle.vert
